--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
 
             <footer>
-                2016&nbsp;&copy;&nbsp;<a href="http://radov.xyz/" target="_blank">radov.xyz</a>
+                <a href="/admin/web">2016</a>&nbsp;&copy;&nbsp;<a href="http://radov.xyz/" target="_blank">radov.xyz</a>
                 <a href="#wrapper" class="to-top">
                     <i class="fa fa-caret-up fa-3x" title="вверх"></i>
                 </a>
